Credits Page and some cleanup

--- a/DanceCalc/m4d/Views/Home/SiteMap.cshtml
+++ b/DanceCalc/m4d/Views/Home/SiteMap.cshtml
@@ -25,12 +25,15 @@
                     <li><a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</a></li>
                     <li><a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">Question 2: What dance styles can I dance to my favorite song(s)?</a></li>
                     <li><a href="https://www.music4dance.net/blog/the-pink-martini-solution/">The Pink Martini Solution</a></li>
+                    <li><a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">Help: How would you group this dance style?</a></li>
+                    <li><a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">The “Dancing with the Stars” Solution</a></li>
                 </ul>
             </li>
             <li><a href="/home/contact">Contact</a></li>
             <li><a href="/home">Home Page</a></li>
             <li><a href="/home/privacypolicy">Privacy Policy</a></li>
             <li><a href="/home/termsofservice">Terms of Service</a></li>
+            <li><a href="/home/credits">Credits</a></li>
         </ul>
     </div>
     <div class="col-md-4">
