--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -34,6 +34,11 @@
         <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
         <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
         <h4 class="blog">The Pink Martini Solution</h4>
-        <p class="neutral">Not all artists are created equal when it comes to creating dance-able music.  For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a></p>
+        <p class="neutral">Not all artists are created equal when it comes to creating dance-able music. For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a>
+        <h4 class="blog">Help: How would you group this dance style?</h4>
+        <p class="neutral">One of the fun things about learning more about different dance styles is... <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">[Read more]</a>
+        <h4 class="blog">The “Dancing with the Stars” Solution</h4>
+        <p class="neutral">I learned to dance in part because <a href="http://www.imdb.com/title/tt0092890/?ref_=nv_sr_1"><i>Dirty Dancing</i></a> made me want to be Johnny Castle... <a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">[Read more]</a>
+        </p>
     </div>
 </div>
