--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -82,6 +82,7 @@
                             <li><a href="https://www.music4dance.net/blog">Blog</a></li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Site Map", "sitemap", "Home")</li>
+                            <li>@Html.ActionLink("Credits", "credits", "Home")</li>
                         </ul>
                     </li>
 
@@ -107,7 +108,8 @@
                     <p>&copy; @DateTime.Now.Year - Music4Dance.net -
                     @Html.ActionLink("Site Map", "sitemap", "Home") - 
                     @Html.ActionLink("Terms of Service","termsofservice","Home") - 
-                    @Html.ActionLink("Privacy Policy", "privacypolicy","Home")
+                    @Html.ActionLink("Privacy Policy", "privacypolicy","Home") - 
+                    @Html.ActionLink("Credits", "credits", "Home")
                     </p>
                 </footer>
             </div>
