--- a/DanceCalc/m4d/Views/Home/Home.cshtml
+++ b/DanceCalc/m4d/Views/Home/Home.cshtml
@@ -1,8 +1,77 @@
-﻿@{
+﻿@using m4d.ViewModels;
+
+@{
     ViewBag.Title = "Home Page";
     ViewBag.Canonical = "https://www.music4dance.net";
     ViewBag.Description = "music4dance.net is an online catalog, tools and eductational resources that help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
+
+    var dances = new[]
+    {
+        new DanceClass{Title="Ballroom",Image="ballroom",
+            Dances=new List<DanceMapping> {new DanceMapping("Foxtrot"),new DanceMapping("Waltz"), new DanceMapping("Tango","tango-(ballroom)"), 
+                new DanceMapping("Cha Cha"), new DanceMapping("Rumba"), new DanceMapping("Cha Cha"), new DanceMapping("Swing","east-coast-swing"),
+                new DanceMapping("Samba"), new DanceMapping("Mambo"), new DanceMapping("Paso Doble"), new DanceMapping("Jive")
+            }},
+        new DanceClass{Title="Swing",Image="swing",TopDance="swing",
+            Dances=new List<DanceMapping> 
+              {new DanceMapping("Lindy Hop"),new DanceMapping("East Coast Swing"),new DanceMapping("West Coast Swing"),new DanceMapping("Hustle"),
+                new DanceMapping("Samba"),new DanceMapping("Jive"),new DanceMapping("Jump Swing"),new DanceMapping("Carolina Shag")
+            }},
+        new DanceClass{Title="Latin",Image="salsa",
+            Dances=new List<DanceMapping> 
+            {
+                new DanceMapping("Salsa"),new DanceMapping("Bachata"),new DanceMapping("Cumbia"),new DanceMapping("Merengue"),
+                new DanceMapping("Mambo"),new DanceMapping("Cha Cah"),new DanceMapping("Rumba"),
+                new DanceMapping("Samba"),new DanceMapping("Bossa Nova")
+            }},
+        new DanceClass{Title="Tango",Image="tango",TopDance="tango",
+            Dances=new List<DanceMapping> 
+            {
+                new DanceMapping("Argentine Tango"),new DanceMapping("Neo Tango"),new DanceMapping("Milonga"),new DanceMapping("Ballroom Tango","tango-(ballroom)"),
+            }},
+    };
 }
 
-<h2>View</h2>
-
+<div class="row col-md-12" style="background-color: #424242">
+    <div class="centeredImage"><img src="~/Content/Music4DanceBannerColor.png" alt="Shall we dance to music?" /></div>
+</div>
+<div id="danceCarousel" class="carousel slide row col-md-12" data-ride="carousel" style="padding-top: 10px; padding-bottom: 10px">
+    <!-- Carousel indicators -->
+    <ol id="danceCarouselIndicators" class="carousel-indicators">
+        <li data-target="#danceCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#danceCarousel" data-slide-to="1"></li>
+        <li data-target="#danceCarousel" data-slide-to="2"></li>
+        <li data-target="#danceCarousel" data-slide-to="3"></li>
+    </ol>
+    <!-- Carousel items -->
+    <div class="carousel-inner" role="listbox">
+        @for (var i = 0; i < dances.Length; i++)
+        {
+            var dance = dances[i];
+            var mainLink = dance.TopDance ?? "index";
+            <!-- TODNEXT: Figure out how to get the silhottes faded and used as BG images for mobile size -->
+            <div class="item @(i == 0 ? "active" : string.Empty) row">
+                <div class="col-md-4 col-md-offset-2 col-xs-8 col-xs-offset-2">
+                    <div class="dance-title">@Html.ActionLink("Music for " + @dance.Title + " Dancers", @mainLink, "dances")</div>
+                    <ul class="dance-list">
+                        @foreach (var dm in dance.Dances)
+                        {
+                            <li>@Html.ActionLink(@dm.Title, @dm.Name, "dances")</li>
+                        }
+                    </ul>
+                </div>
+                <div class="col-md-4 hidden-xs hidden-sm"><img src="~/Content/@(dance.Image).png" alt=@dance.Title width="600" height="600"/>
+                </div>
+            </div>
+        }
+    </div>
+    <!-- Carousel nav -->
+    <a class="small left carousel-control" href="#danceCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="small right carousel-control" href="#danceCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div> 
