--- a/DanceCalc/m4d/Views/Home/Home.cshtml
+++ b/DanceCalc/m4d/Views/Home/Home.cshtml
@@ -32,7 +32,7 @@
     };
 }
 
-<div class="row col-md-12" style="background-color: #424242">
+<div class="row col-md-12 hidden-xs hidden-sm hidden-md" style="background-color: #424242">
     <div class="centeredImage"><img src="~/Content/Music4DanceBannerColor.png" alt="Shall we dance to music?" /></div>
 </div>
 <div id="danceCarousel" class="carousel slide row col-md-12" data-ride="carousel" style="padding-top: 10px; padding-bottom: 10px">
@@ -50,7 +50,7 @@
             var dance = dances[i];
             var mainLink = dance.TopDance ?? "index";
             <!-- TODNEXT: Figure out how to get the silhottes faded and used as BG images for mobile size -->
-            <div class="item @(i == 0 ? "active" : string.Empty) row">
+            <div class="item @(i == 0 ? "active" : string.Empty) @(dance.Image + "-image") row">
                 <div class="col-md-4 col-md-offset-2 col-xs-8 col-xs-offset-2">
                     <div class="dance-title">@Html.ActionLink("Music for " + @dance.Title + " Dancers", @mainLink, "dances")</div>
                     <ul class="dance-list">
@@ -60,8 +60,8 @@
                         }
                     </ul>
                 </div>
-                <div class="col-md-4 hidden-xs hidden-sm"><img src="~/Content/@(dance.Image).png" alt=@dance.Title width="600" height="600"/>
-                </div>
+                <div class="col-md-4 hidden-xs hidden-sm hidden-md"><img src="~/Content/@(dance.Image).png" alt=@dance.Title width="600" height="600"/></div>
+                <div class="col-md-4 hidden-xs hidden-sm hidden-lg"><img src="~/Content/@(dance.Image).png" alt=@dance.Title width="400" height="400" /></div>
             </div>
         }
     </div>
