--- a/DanceCalc/m4d/Views/Home/Credits.cshtml
+++ b/DanceCalc/m4d/Views/Home/Credits.cshtml
@@ -14,7 +14,9 @@
 
 <p>The music4dance logo and assistance with some colors and other design components was provided by Polly Payne of <a href="http://www.delacatadesign.com/">Delacata Design</a>.</p>
 
-<p>The dancer silhouettes were created by Dmitry Skvorcov: © <a href="http://www.dreamstime.com/dmiskv_info#res10177599">Dmiskv</a> | <a href="http://www.dreamstime.com/#res10177599">Dreamstime.com</a> - <a href="http://www.dreamstime.com/royalty-free-stock-photography-silhouettes-pairs-dancing-image13114167#res10177599">Silhouettes Of The Pairs Dancing Photo</a></p>
+<p>The dancer silhouettes were created by Dmitry Skvorcov: © <a href="http://www.dreamstime.com/dmiskv_info#res10177599">Dmiskv</a> | <a href="http://www.dreamstime.com/#res10177599">Dreamstime.com</a> - <a href="http://www.dreamstime.com/royalty-free-stock-photography-silhouettes-pairs-dancing-image13114167#res10177599">Silhouettes Of The Pairs Dancing Photo</a></p>
+
+<p>Many of thie icons on the site are provided via the twitter bootstrap including of <a href="http://glyphicons.com/"></a>Glyphicons</p>
 
 <h2>Dance</h2>
 
