--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -1,44 +1,167 @@
-﻿@{
+﻿@using m4d.ViewModels;
+
+@{
     ViewBag.Title = "Home Page";
     ViewBag.Canonical = "https://www.music4dance.net";
     ViewBag.Description = "music4dance.net is an online catalog, tools and eductational resources that help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
+
+    var dances = new[]
+    {
+        new DanceClass{Title="Ballroom",Image="ballroom",
+            Dances=new List<DanceMapping> {new DanceMapping("Foxtrot"),new DanceMapping("Waltz"), new DanceMapping("Tango","tango-(ballroom)"),
+                new DanceMapping("Cha Cha"), new DanceMapping("Rumba"), new DanceMapping("Cha Cha"), new DanceMapping("Swing","east-coast-swing"),
+                new DanceMapping("Samba"), new DanceMapping("Mambo"), new DanceMapping("Paso Doble"), new DanceMapping("Jive")
+            }},
+        new DanceClass{Title="Swing",Image="swing",TopDance="swing",
+            Dances=new List<DanceMapping>
+              {new DanceMapping("Lindy Hop"),new DanceMapping("East Coast Swing"),new DanceMapping("West Coast Swing"),new DanceMapping("Hustle"),
+                new DanceMapping("Samba"),new DanceMapping("Jive"),new DanceMapping("Jump Swing"),new DanceMapping("Carolina Shag")
+            }},
+        new DanceClass{Title="Latin",Image="salsa",
+            Dances=new List<DanceMapping>
+            {
+                new DanceMapping("Salsa"),new DanceMapping("Bachata"),new DanceMapping("Cumbia"),new DanceMapping("Merengue"),
+                new DanceMapping("Mambo"),new DanceMapping("Cha Cah"),new DanceMapping("Rumba"),
+                new DanceMapping("Samba"),new DanceMapping("Bossa Nova")
+            }},
+        new DanceClass{Title="Tango",Image="tango",TopDance="tango",
+            Dances=new List<DanceMapping>
+            {
+                new DanceMapping("Argentine Tango"),new DanceMapping("Neo Tango"),new DanceMapping("Milonga"),new DanceMapping("Ballroom Tango","tango-(ballroom)"),
+            }},
+    };
 }
 
+<div class="row col-md-12 hidden-xs hidden-sm hidden-md" style="background-color: #424242">
+    <div class="centeredImage"><img src="~/Content/Music4DanceBannerColor.png" alt="Shall we dance to music?" /></div>
+</div>
+<div id="danceCarousel" class="carousel slide row col-md-12" data-ride="carousel" style="padding-top: 10px; padding-bottom: 10px">
+    <!-- Carousel indicators -->
+    <ol id="danceCarouselIndicators" class="carousel-indicators">
+        <li data-target="#danceCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#danceCarousel" data-slide-to="1"></li>
+        <li data-target="#danceCarousel" data-slide-to="2"></li>
+        <li data-target="#danceCarousel" data-slide-to="3"></li>
+    </ol>
+    <!-- Carousel items -->
+    <div class="carousel-inner" role="listbox">
+        @for (var i = 0; i < dances.Length; i++)
+        {
+            var dance = dances[i];
+            var mainLink = dance.TopDance ?? "index";
+            <!-- TODNEXT: Figure out how to get the silhottes faded and used as BG images for mobile size -->
+            <div class="item @(i == 0 ? "active" : string.Empty) @(dance.Image + "-image") row">
+                <div class="col-md-4 col-md-offset-2 col-xs-8 col-xs-offset-2">
+                    <div class="dance-title">@Html.ActionLink("Music for " + @dance.Title + " Dancers", @mainLink, "dances")</div>
+                    <ul class="dance-list">
+                        @foreach (var dm in dance.Dances)
+                        {
+                            <li>@Html.ActionLink(@dm.Title, @dm.Name, "dances")</li>
+                        }
+                    </ul>
+                </div>
+                <div class="col-md-4 hidden-xs hidden-sm hidden-md">
+                    <img src="~/Content/@(dance.Image).png" alt=@dance.Title width="600" height="600" />
+                </div>
+                <div class="col-md-4 hidden-xs hidden-sm hidden-lg">
+                    <img src="~/Content/@(dance.Image).png" alt=@dance.Title width="400" height="400" />
+                </div>
+            </div>
+        }
+    </div>
+    <!-- Carousel nav -->
+    <a class="small left carousel-control" href="#danceCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="small right carousel-control" href="#danceCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div class="row col-xs-12"><hr /></div>
 <div class="row">
-    <div class="col-md-4">
-        <h1 class="music">Music</h1>
-        <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?</p>
-        <p class="neutral">Our <a href="/dances">dances page</a> is a quick reference for the styles of dance that will link you to a page for each dance including a description, a top ten list, and more.</p>
-        <p class="neutral">Or go directly to our <a href="/song">database of songs</a> where you can quickly search for a <a href="/song/search?SearchString=Aspettami">song</a> or sort a list of songs by attributes like <a href="/song/search?dances=SWG&filter=Index-.-Tempo-.-.-.-.-.-.-.">tempo</a> or <a href="/song/search?dances=ECS&filter=Index-.-Dances-.-.-.-.-.-.-.">popularity</a>.</p>
-        <p class="neutral">Most of the songs in our <a href="/song">database</a> are linked to purchase or streaming links for <a href="/song/advancedsearch?services=I">ITunes</a>, <a href="/song/advancedsearch?services=A">Amazon</a>, <a href="/song/advancedsearch?services=S">Spotify</a>, and <a href="/song/advancedsearch?services=X">Xbox Music</a> so try clicking on the logo of your prefered music source and listen or purchase the music that you've discovered here.</p>
-        <p class="neutral">Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
-        <p class="neutral">Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
+    <div class="col-sm-4">
+        <a href="#music">
+            <img src="~/Content/music.png" alt="music" width="128" height="128" class="center-block" />
+            <h2 class="music center-block" style="text-align: center">Music</h2>
+        </a>
     </div>
-    <div class="col-md-4">
-        <h1 class="tools">Tools</h1>
-        <p class="neutral">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/home/counter">dance counter page</a> to help you answer that question.</p>
-        <p class="neutral">Are you curious about how fast quickstep is compared to jive?  Or are you starting practice to competition tempo music and aren't quite sure what tempo to dance Paso Doble to?  Use our <a href="/home/tempi">dance tempi page</a> to explore the relationships between dance tempi as well as the tempi prescribed for partern dances by several organizations that regulate dance competitions.</p>
-        <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.</p>
+    <div class="col-sm-4">
+        <a href="#tools">
+            <img src="~/Content/tools.png" alt="tools" width="128" height="128" class="center-block" />
+            <h2 class="tools center-block" style="text-align: center">Tools</h2>
+        </a>
     </div>
-    <div class="col-md-4">
-        <h1 class="blog">Info</h1>
-        <p class="neutral">
-            Are you looking for more information on how music relates to dance, follow our <a href="https://www.music4dance.net/blog">blog</a>.
-        </p>
-        <h4 class="blog">Introducing Music4Dance.Net/Blog</h4>
-        <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="https://www.music4dance.net/blog/hello-world/">[Read more]</a> </p>
-        <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
-        <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="https://www.music4dance.net/blog/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
-        <h4 class="blog">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</h4>
-        <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">[Read more]</a> </p>
-        <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
-        <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
-        <h4 class="blog">The Pink Martini Solution</h4>
-        <p class="neutral">Not all artists are created equal when it comes to creating dance-able music. For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a>
+    <div class="col-sm-4">
+        <a href="#info">
+            <img src="~/Content/info.png" alt="info" width="128" height="128" class="center-block" />
+            <h2 class="blog center-block" style="text-align: center">Info</h2>
+        </a>
+    </div>
+</div>
+
+<div class="row col-xs-12"><hr /></div>
+
+<div id="music" class="row col-md-12">
+    <h1 class="music">Music</h1>
+    <p class="neutral">Are you learning to partner dance and looking for practice music? Or are you choreographing a piece and looking for new ideas for music?</p>
+    <p class="neutral">
+        Our <a href="/dances">dances page</a> is a quick reference for the styles of dance that will link you to a page for each dance including a description, a top ten list, and more.
+    </p>
+    <p class="neutral">
+        Or go directly to our <a href="/song">database of songs</a> where you can quickly search for a <a href="/song/search?SearchString=Aspettami">song</a> or sort a list of songs by attributes like <a href="/song/search?dances=SWG&filter=Index-.-Tempo-.-.-.-.-.-.-.">tempo</a> or <a href="/song/search?dances=ECS&filter=Index-.-Dances-.-.-.-.-.-.-.">popularity</a>.
+    </p>
+    <p class="neutral">
+        Most of the songs in our <a href="/song">database</a> are linked to purchase or streaming links for <a href="/song/advancedsearch?services=I">ITunes</a>, <a href="/song/advancedsearch?services=A">Amazon</a>, <a href="/song/advancedsearch?services=S">Spotify</a>, and <a href="/song/advancedsearch?services=X">Xbox Music</a> so try clicking on the logo of your prefered music source and listen or purchase the music that you've discovered here.
+    </p>
+    <p class="neutral">
+        Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.
+    </p>
+    <p class="neutral">
+        Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.
+    </p>
+</div>
+
+<div class="row col-xs-12"><hr /></div>
+
+<div id="tools" class="row col-md-12">
+    <h1 class="tools">Tools</h1>
+    <p class="neutral">
+        Do you have a favorite song (or songs) that you would like to match to a dance style? Use our <a href="/home/counter">dance counter page</a> to help you answer that question.
+    </p>
+    <p class="neutral">
+        Are you curious about how fast quickstep is compared to jive? Or are you starting practice to competition tempo music and aren't quite sure what tempo to dance Paso Doble to? Use our <a href="/home/tempi">dance tempi page</a> to explore the relationships between dance tempi as well as the tempi prescribed for partern dances by several organizations that regulate dance competitions.
+    </p>
+    <p class="neutral">
+        We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
+    </p>
+</div>
+
+<div class="row col-xs-12"><hr /></div>
+
+<div id="info" class="row col-md-12">
+    <h1 class="blog">Info</h1>
+    <p class="neutral">
+        Are you looking for more information on how music relates to dance, follow our <a href="https://www.music4dance.net/blog">blog</a>.
+    </p>
+    <h4 class="blog">Introducing Music4Dance.Net/Blog</h4>
+    <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="https://www.music4dance.net/blog/hello-world/">[Read more]</a> </p>
+    <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
+    <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="https://www.music4dance.net/blog/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
+    <h4 class="blog">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</h4>
+    <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">[Read more]</a> </p>
+    <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
+    <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
+    <h4 class="blog">The Pink Martini Solution</h4>
+    <p class="neutral">
+        Not all artists are created equal when it comes to creating dance-able music. For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a>
         <h4 class="blog">Help: How would you group this dance style?</h4>
-        <p class="neutral">One of the fun things about learning more about different dance styles is... <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">[Read more]</a>
+    <p class="neutral">
+        One of the fun things about learning more about different dance styles is... <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">[Read more]</a>
         <h4 class="blog">The “Dancing with the Stars” Solution</h4>
-        <p class="neutral">I learned to dance in part because <a href="http://www.imdb.com/title/tt0092890/?ref_=nv_sr_1"><i>Dirty Dancing</i></a> made me want to be Johnny Castle... <a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">[Read more]</a>
-        </p>
-    </div>
+    <p class="neutral">
+        I learned to dance in part because <a href="http://www.imdb.com/title/tt0092890/?ref_=nv_sr_1"><i>Dirty Dancing</i></a> made me want to be Johnny Castle... <a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">[Read more]</a>
+    </p>
 </div>
