Code to fixup times based on properties

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -30,6 +30,7 @@
     <li>@Html.ActionLink("Update Albums", "UpdateAlbums")</li>
     <li>@Html.ActionLink("Remove Lookup History", "CleanLookupHistory")</li>
     <li>@Html.ActionLink("Fix up Zero Times", "FixZeroTime")</li>
+    <li>@Html.ActionLink("Times from Properties", "TimesFromProperties")</li>
     @*<li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes")</li>*@
     <li>@Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries")</li>
     @*<li>@Html.ActionLink("Add Dance Groups", "AddDanceGroups")</li>
