--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             Dances=new List<DanceMapping>
             {
                 new DanceMapping("Salsa"),new DanceMapping("Bachata"),new DanceMapping("Cumbia"),new DanceMapping("Merengue"),
-                new DanceMapping("Mambo"),new DanceMapping("Cha Cah"),new DanceMapping("Rumba"),
+                new DanceMapping("Mambo"),new DanceMapping("Cha Cha"),new DanceMapping("Rumba"),
                 new DanceMapping("Samba"),new DanceMapping("Bossa Nova")
             }},
         new DanceClass{Title="Tango",Image="tango",TopDance="tango",
