Another small typo on home page

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     {
         new DanceClass{Title="Ballroom",Image="ballroom",
             Dances=new List<DanceMapping> {new DanceMapping("Foxtrot"),new DanceMapping("Waltz"), new DanceMapping("Tango","tango-(ballroom)"),
-                new DanceMapping("Cha Cha"), new DanceMapping("Rumba"), new DanceMapping("Cha Cha"), new DanceMapping("Swing","east-coast-swing"),
+                new DanceMapping("Cha Cha"), new DanceMapping("Rumba"), new DanceMapping("Swing","east-coast-swing"),
                 new DanceMapping("Samba"), new DanceMapping("Mambo"), new DanceMapping("Paso Doble"), new DanceMapping("Jive")
             }},
         new DanceClass{Title="Swing",Image="swing",TopDance="swing",
