Add collegiate shag to carousel

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         new DanceClass{Title="Swing",Image="swing",TopDance="swing",
             Dances=new List<DanceMapping>
               {new DanceMapping("Lindy Hop"),new DanceMapping("East Coast Swing"),new DanceMapping("West Coast Swing"),new DanceMapping("Hustle"),
-                new DanceMapping("Samba"),new DanceMapping("Jive"),new DanceMapping("Jump Swing"),new DanceMapping("Carolina Shag")
+                new DanceMapping("Jive"),new DanceMapping("Jump Swing"), new DanceMapping("Carolina Shag"), new DanceMapping("Collegiate Shag"),
             }},
         new DanceClass{Title="Latin",Image="salsa",
             Dances=new List<DanceMapping>
